2001-07-14  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* scripts/check.test: New file.

	* Makefile.am (TESTS): New var.

2001-07-14  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* modules/main: Use :renamer for specifying renaming procedure.

2001-07-10  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* scripts/hello (display-version, display-help): Fix comment; nfc.

2001-07-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic/README: Corrected sample session.

	* box-module/box.c, box-dynamic-module/box.c, box-dynamic/box.c
	* box/box.c: scm_bits_t -> scm_t_bits.

2001-06-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic-module/README: Use a better example for box-map, as
	suggested by Thomas Wawrzinek.

2001-06-14  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* scripts/README, scripts/hello.scm, safe/untrusted.scm,
	safe/evil.scm, safe/README, modules/README, modules/main,
	modules/module-0.scm, modules/module-1.scm, modules/module-2.scm:
	Minor cleanup.

	* README: Added intro stuff, restructured a bit.

	* box-dynamic/README, box-module/README, box/README: Cleanup and
	restructuring.

	* box-dynamic-module/box-mixed.scm: New file, demonstrating usage
	of extension library functionality, but without exporting
	procedures from the library.

	Thanks to Thomas Wawrzinek for the idea and example code!

	* box-dynamic-module/box-module.scm: Add comments, export
	make-box, box-ref, box-set!.

	* box-dynamic-module/README: Integrate new module (box-mixed),
	restructure and cleanup a bit.

2001-06-06  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic-module/box-module.scm: New file.

2001-06-05  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic-module: New directory, implements the box type in a
	shared library and places the definitions in a C-only module.

	Thanks to Thomas Wawrzinek for this, too!

	* box-dynamic/box.c, box/box.c, box-dynamic-module/box.c,
	box-module/box.c (mark_box): Fixed typo in comment.
